# tld

./: .codecov.yml  .coderabbit.yaml  .coveragerc  .coveragerc_py27  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yaml  .secrets.baseline  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  CREDITS.rst  LICENSE_GPL2.0.txt  LICENSE_LGPL_2.1.txt  LICENSE_MPL_1.1.txt  MANIFEST.in  Makefile  README.rst  SECURITY.md  SECURITY.rst  TODOS.rst  bench.py  builddocs.sh  conftest.py  mypy.ini  pyproject.toml  pytest.ini  pytest_py27.ini  readme.rst  rebuild_docs.sh  requirements.txt  runtests.py  setup.cfg  setup.py  (+6 more)
.github/workflows/: test.yml  test_unstable.yml
benchmarks/: README.rst  constants.py  factories.py  fallbacks.py  profile.py  speed_test_compare.py
debian/: python-tld_0.7.9-1_all.deb  python3-tld_0.10-1_all.deb  python3-tld_0.11-1_all.deb  python3-tld_0.11.1-1_all.deb  python3-tld_0.7.10-1_all.deb  python3-tld_0.7.9-1_all.deb  python3-tld_0.8-1_all.deb  python3-tld_0.9-1_all.deb  python3-tld_0.9.1-1_all.deb  python3-tld_0.9.3-1_all.deb  python3-tld_0.9.4-1_all.deb  python3-tld_0.9.5-1_all.deb  python3-tld_0.9.6-1_all.deb  python3-tld_0.9.7-1_all.deb
dist_py35/: tld-0.11.1-py35-none-any.whl
docs/: Makefile  changelog.rst  conf.py  conf.py.distrib  conf.py~  documentation.rst  documentation.rst.distrib  index.rst  llms.rst  make.bat  requirements.txt  security.rst  source_tree.rst  tld.commands.rst  tld.rst  tld.sources.rst
examples/: README.rst
examples/custom_tld_names_source/: example.py  parser.py
examples/custom_tld_names_source/res/: effective_tld_names_custom.dat.txt
examples/gae/: data.py  example.py  parser.py
jupyter/: README.rst  tld.ipynb
requirements/: base.in  base.txt  bench.in  bench.txt  build.in  build.txt  code_style.in  code_style.txt  debug.in  debug.txt  dev.in  dev.txt  docs.txt  release.in  release.txt  test.in  test.txt  testing.in  testing.txt
scripts/: benchmark.sh  black.sh  build_deb_package.sh  build_deb_package_py27.sh  build_deb_package_py35.sh  build_docs.sh  clean_up.sh  clear_virtualenvs.sh  compile_requirements.sh  cprofile.sh  detect-secrets-create-baseline.sh  doc8.sh  generate_project_source_tree.py  install.sh  isort.sh  line_profiler.sh  make_all_releases.sh  make_release.sh  make_release_py27.sh  make_release_py35.sh  mypy.sh  prepare_all_builds.sh  prepare_build.sh  prepare_build_py27.sh  prepare_build_py35.sh  prepare_docs.sh  pycodestyle.sh  pylint.sh  rebuild_docs.sh  reinstall.sh  ruff.sh  runtests.sh  source_install.sh  test.sh  test_release.sh  uninstall.sh  upgrade_requirements.sh
src/tld/: __init__.py  base.py  base.pyx  bench.py  conf.py  defaults.py  exceptions.py  helpers.py  registry.py  result.py  settings.py  test.py  tests.py  trie.py  trie.pyx  update.py  utils.py  utils.pyx  utils_.py
src/tld/commands/: update_tld_names.py
src/tld/res/: effective_tld_names.dat.txt
src/tld/tests/: base.py  test_commands.py  test_core.py  test_registry.py
src/tld/tests/res/: effective_tld_names_custom.dat.txt
src/tld/utils__/: parsers.py  storage.py
src_py35/tld/: __init__.py  base.py  conf.py  exceptions.py  helpers.py  result.py
src_py35/tld.egg-info/: PKG-INFO  SOURCES.txt
src_py35/tld/tests/: base.py
