# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''


# Build system information below.
# NOTE: You don't need this in your own Black configuration.

[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
known_first_party = "tld"
known_third_party = ["faker"]
skip = ["wsgi.py",]

[tool.ruff]
line-length = 80

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []  # "UP009"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "examples/gae/data.py",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.doc8]
ignore-path = [
    "docs/requirements.txt",
    "src/tld.egg-info/SOURCES.txt",
    "src/tld/res/",
    "build/",
    "docs/_build",
    "requirements/*.in",
    "requirements/*.txt",
    "src/tld.egg-info",
    "examples/custom_tld_names_source/res/*.txt",
    "src/tld/tests/res/*.txt",
]

max-line-length = 80
sphinx = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-vvv",
    "-q",
    "--cov=tld",
    "--ignore=.tox",
    "--ignore=requirements",
    "--ignore=release",
    "--ignore=bugs",
    "--ignore=tmp",
    "--ignore=tests",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=annotate",
    "--cov-append",
    "--capture=no",
]
testpaths = [
#    "**/test*.py",
#    "**/*.rst",
]
python_files = [
    "test_*.py",
    "tests.py",
]
pythonpath = [
    "src",
    "examples/gae",
]
norecursedirs = [".git", "*.egg", ".tox", "build", "dist", ".tox"]

markers = [
    "slow: mark a test that takes a long time to run.",
    "codeblock: pytest-codeblock markers",
    "documentation: mark test as a documentation test",
]

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true
omit = [
    ".tox/*",
    "src/tld/bench.py",
    "src/tld/tests/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "raise NotImplementedError",
]
