# ----------------------------------------------------------------------------
# Project metadata (PEP 621)
# ----------------------------------------------------------------------------
[project]
name = "tld"
version = "0.13.2"
description = "Extract the top-level domain (TLD) from the URL given."
readme = "README.rst"
requires-python = ">=3.7"
authors = [
    {name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com"},
]
maintainers = [
    {name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com"},
]
license = "MPL-1.1 OR GPL-2.0-only OR LGPL-2.1-or-later"
keywords = ["tld", "top-level domain names", "python"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet",
]
dependencies = []

[project.urls]
"Bug Tracker" = "https://github.com/barseghyanartur/tld/issues"
"Documentation" = "https://tld.readthedocs.io/"
"Source Code" = "https://github.com/barseghyanartur/tld/"
"Changelog" = "https://tld.readthedocs.io/en/latest/changelog.html"

[project.scripts]
"update-tld-names" = "tld.utils:update_tld_names_cli"

[project.optional-dependencies]
all = ["tld[build,lint,dev,test,docs]"]
build = [
    "build",
    "pkginfo",
    "twine",
    "wheel",
]
lint = [
    "doc8",
    "mypy",
    "pydoclint",
    "ruff",
]
dev = [
    "detect-secrets",
    "ipython",
    "uv",
]
test = [
    "coverage",
    "fake.py",
    "pytest",
    "pytest-codeblock",
    "pytest-cov",
    "pytest-ordering",
    "tox",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-no-pragma",
    "sphinx-llms-txt-link",
    "sphinx-source-tree",
]

# ----------------------------------------------------------------------------
# Build system
# ----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------------------
# setuptools-specific packaging
# ----------------------------------------------------------------------------
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tld", "tld.*"]

[tool.setuptools.package-data]
"tld" = ["res/*", "tests/res/*"]

# ----------------------------------------------------------------------------
# Black configuration
# ----------------------------------------------------------------------------
[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

# ----------------------------------------------------------------------------
# isort configuration
# ----------------------------------------------------------------------------
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
known_first_party = "tld"
known_third_party = ["faker"]
skip = ["wsgi.py",]

# ----------------------------------------------------------------------------
# Ruff configuration
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 80

# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F"]
lint.ignore = []  # "UP009"

# Exclude a variety of commonly ignored directories.
lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "examples/gae/data.py",
]
lint.per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

# ----------------------------------------------------------------------------
# doc8 configuration
# ----------------------------------------------------------------------------
[tool.doc8]
ignore-path = [
    "docs/requirements.txt",
    "src/tld.egg-info/SOURCES.txt",
    "src/tld/res/",
    "build/",
    "docs/_build",
    "requirements/*.in",
    "requirements/*.txt",
    "src/tld.egg-info",
    "examples/custom_tld_names_source/res/*.txt",
    "src/tld/tests/res/*.txt",
]

max-line-length = 80
sphinx = true

# ----------------------------------------------------------------------------
# pytest configuration
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-vvv",
    "-q",
    "--cov=tld",
    "--ignore=.tox",
    "--ignore=requirements",
    "--ignore=release",
    "--ignore=bugs",
    "--ignore=tmp",
    "--ignore=tests",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=annotate",
    "--cov-append",
    "--capture=no",
]
testpaths = [
#    "**/test*.py",
#    "**/*.rst",
]
python_files = [
    "test_*.py",
    "tests.py",
]
pythonpath = [
    "src",
    "examples/gae",
]
norecursedirs = [".git", "*.egg", ".tox", "build", "dist", ".tox"]

markers = [
    "slow: mark a test that takes a long time to run.",
    "codeblock: pytest-codeblock markers",
    "documentation: mark test as a documentation test",
]

# ----------------------------------------------------------------------------
# mypy configuration
# ----------------------------------------------------------------------------
[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# coverage configuration
# ----------------------------------------------------------------------------
[tool.coverage.run]
relative_files = true
omit = [
    ".tox/*",
    "src/tld/bench.py",
    "src/tld/tests/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "raise NotImplementedError",
]
