;[bdist_wheel]
;universal = 1

;[wheel]
;universal = 1

[metadata]
license-file = LICENSE_LGPL_2.1.rst

[doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path =
    docs/_build,
    requirements/*.in,
    requirements/*.txt,
    src/tld.egg-info,
    examples/custom_tld_names_source/res/*.txt,
    src/tld/tests/res/*.txt

max-line-length = 80
sphinx = true
